--- a/src/assets/css/variable.less
+++ b/src/assets/css/variable.less
@@ -1,2 +1,10 @@
+@black:#000000;
+@white:#ffffff;
+
 @green:#49aa83;
 @orange:#eb6419;
+@red:#e61d39;
+
+@font-size-lg:150%;
+@font-size-md:100%;
+@font-size-sm:75%;
