第一个组件

--- a/src/assets/css/main.less
+++ b/src/assets/css/main.less
@@ -14,3 +14,32 @@ p{word-wrap:break-word}
 .fade-enter, .fade-leave-active {
   opacity: 0
 }
+
+.padding-sm {
+  podding: 10px;
+}
+
+.padding-md {
+  podding: 20px;
+}
+
+.padding-lg {
+  podding: 30px;
+}
+.text-indent{
+  text-indent: 2em;
+}
+.text-align-right{
+  text-align: right;
+}
+
+.text-size-sm{
+  font-size: 75%;
+}
+.text-size-md{
+  font-size: 120%;
+}
+.text-size-lg{
+  font-size: 150%;
+}
+
