--- a/src/assets/css/variable.less
+++ b/src/assets/css/variable.less
@@ -1,7 +1,10 @@
+
 @black:#000000;
-@white:#ffffff;
+@white: #ffffff;
 
 @green:#49aa83;
+@Green: #3d8d8e;//青绿色
+
 @orange:#eb6419;
 @red:#e61d39;
 
