结束注册页开始post 数据处理机制 HTTP

--- a/src/assets/css/main.less
+++ b/src/assets/css/main.less
@@ -16,15 +16,15 @@ p{word-wrap:break-word}
 }
 
 .padding-sm {
-  podding: 10px;
+  padding: 10px;
 }
 
 .padding-md {
-  podding: 20px;
+  padding: 20px;
 }
 
 .padding-lg {
-  podding: 30px;
+  padding: 30px;
 }
 .text-indent{
   text-indent: 2em;
